# hello-sdl2-cpp

./: CMakeLists.txt  README.md  compile_commands.json
src/: CameraComponent.h  CoordinateLabelComponent.h  DebugRenderUtils.h  DebugUtils.h  Entity.h  PositionComponent.h  VelocityComponent.h  drawPointCloud.cpp  drawPointCloud.h  generatePointCloud.cpp  generatePointCloud.h  handleCameraMovement.cpp  handleCameraMovement.h  main.cpp  morphTransition.cpp  morphTransition.h  onButtonPress.cpp  onButtonPress.h  onMouseMovement.cpp  onMouseMovement.h  renderScene.cpp  renderScene.h  switchCoordinateSystem.cpp  switchCoordinateSystem.h  updatePositions.cpp  updatePositions.h
src/Components/: AudioComponent.hpp  CameraComponent.h  FunctionComponent.hpp  MorphingComponent.h  PositionComponent.h  ProjectionComponent.hpp  VelocityComponent.hpp  WaveletComponent.h  WaveletComponent.hpp  WaveletVisualizationComponent.h  WaveletVisualizationComponent.hpp
src/Engine/ECS/: ComponentManager.h  ComponentManager.hpp  Coordinator.h  Coordinator.hpp  EntityManager.h  EntityManager.hpp  System.h  System.hpp  SystemManager.h  SystemManager.hpp  Types.h
src/Engine/Events/: Event.hpp  EventManager.h  EventManager.hpp
src/GUI/: Button.cpp  Button.h  Button.hpp  GUIElement.hpp  GUIManager.cpp  GUIManager.h  GUIManager.hpp
src/Systems/: AudioSystem.h  AudioSystem.hpp  CameraSystem.cpp  CameraSystem.h  CameraSystem.hpp  MorphingSystem.cpp  MorphingSystem.h  MorphingSystem.hpp  MovementSystem.cpp  MovementSystem.h  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.h  RenderSystem.hpp  WaveletSystem.h  WaveletSystem.hpp  WaveletVisualizationSystem.h  WaveletVisualizationSystem.hpp
